tests/negative/regex/syntax_error/input.ci
void main() {
    RegExp re = regexCompile("(", "");
    print(regexPattern(re) + "\n");
}
